Edit deserialiser to reference same object instead of creating duplicate